cabal-version:      2.4
name:               reader
version:            0.1.0.0
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable reader
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        reader

    hs-source-dirs:   app
    default-language: Haskell2010
